tests/baselines/reference/importDeclarationInModuleDeclaration1.errors.txt
tests/cases/compiler/importDeclarationInModuleDeclaration1.ts(2,25): error TS1147: Import declarations in an internal module cannot reference an external module.


==== tests/cases/compiler/importDeclarationInModuleDeclaration1.ts (1 errors) ====
    module m2 {
        import m3 = require("use_glo_M1_public");
                            ~~~~~~~~~~~~~~~~~~~
!!! error TS1147: Import declarations in an internal module cannot reference an external module.
    }